--- a/client/assets/stylesheets/index.css
+++ b/client/assets/stylesheets/index.css
@@ -5,9 +5,11 @@ https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-pract
 html { box-sizing: border-box; }
 *, *:before, *:after { box-sizing: inherit; }
 
+
 /* External CSS */
 @import "purecss/build/pure-min.css";
 @import "purecss/build/grids-responsive-min.css";
-
+@import "bootstrap/dist/css/bootstrap.min.css";
+@import "bootstrap/dist/css/bootstrap-theme.min.css";
 /* Global CSS */
 @import "page.css";
